# bio_ds_project_template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  build.sh  environment.yml  pyproject.toml  run.sh
.github/workflows/: docker-image.yml
