[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_package"
version = "0.0.0"
readme = "README.md"
dependencies = [
    "pre-commit==4.1.0",
    "ruff==0.9.7",
]

[tool.setuptools]
packages = ["my_package"]
package-dir = {"" = "src"}

[tool.ruff]
target-version = "py39"
exclude = ["docs", "results"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "T20", "D"]
ignore = ["E501", "D205"]

[tool.ruff.format]
docstring-code-format = true
preview = true
